resources/css/how-to-build-a-gundam.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-size: 20px;
    font-family: 'Timmana', sans-serif;
}

h1 {
    font-size: 3rem;
}

h2 {
    font-size: 2.7rem;
    text-align: center;
    padding-top: 3rem;
}

h3 {
    font-size: 2rem;
}

h4 {
    font-size: 1.7rem;
}

h5 {
    font-size: 1.2rem;
}

h6 {
    font-size: 1.2rem;
}

p {
    font-size: 1rem;
}

a {
    color: darkblue;
}

a h2 {
    color: black;
}

header {
}

body {
    /* background-image: url(/resources/images/how-to-build-a-gundam/unicorn-interface-design.png); */
    background-position: center;
    background-repeat: repeat;
    margin: 1rem auto;
}

h2.heading {
    margin-top: 2rem;
}

.container .caption h4, h2 {
    text-decoration: underline;
}


/* Nav section */

.logo {
    position: fixed;
    z-index: 10;
    width: auto;
    height: 3rem;
}

.logo img {
    width: auto;
    height: 10rem;
    padding: 1rem;
}

.nav {
    display: inline-flex;
    justify-content: space-evenly;
    /* background-color: black; */
    min-width: 100vw;
    max-width: 100vw;
    min-height: 90vh;
    max-height: 90vh;
    margin-top: 7.4rem;
    /* position: relative;
    top: 7.4rem; */
}

.nav #left-block {
    float: left;
    flex-shrink: 2;
    /* background-color: tomato; */
    min-width: 42vw;
    max-width: 42vw;
    min-height: 80vh;
    max-height: 80vh;
}


.nav #right-block {
    float: right;
    flex-shrink: 2;
    /* background-color: turquoise; */
    min-width: 42vw;
    max-width: 42vw;
    min-height: 80vh;
    max-height: 80vh;
}

.nav #left-block .top img {
    object-fit: cover;
    min-width: 42vw;
    max-width: 42vw;
    min-height: 50vh;
    max-height: 50vh;
}

.nav #left-block .bottom {
    display: block;
    justify-content: space-between;
}

.nav #left-block .bottom .bottom-left img {
    float: left;
    object-fit: cover;
    min-width: 20vw;
    max-width: 20vw;
    min-height: 28vh;
    max-height: 28vh;
}

.nav #left-block .bottom .bottom-right img {
    float: right;  
    object-fit: cover;
    min-width: 20vw;
    max-width: 20vw;
    min-height: 28vh;
    max-height: 28vh;
}

.nav #right-block .left img {
    z-index: 2;
    float: left;
    object-fit: cover;
    min-width: 20vw;
    max-width: 20vw;
    min-height: 80vh;
    max-height: 80vh;
}

/*
.nav #right-block .centre img {
    position: relative;
    right: 3rem;
    z-index: 3;
    min-width: 9vw;
    max-width: 9vw;
    min-height: 35vh;
    max-height: 35vh;
    object-fit: cover;
}
*/

.nav #right-block .right {
    display: inline-flex;
    flex-direction: column;
    float: right;
    z-index: 1;
    position: relative;
}

.nav #right-block .right .top img {
    object-fit: cover;
    position: relative;
    min-width: 20vw;
    max-width: 20vw;
    min-height: 38vh;
    max-height: 38vh; 
}

.nav #right-block .right .bottom img {
    object-fit: cover;
    min-width: 20vw;
    max-width: 20vw;
    min-height: 40vh;
    max-height: 40vh; 
}


/* Equipment section */

section .equipment {
    margin: 2rem auto;
    background-color: whitesmoke;
    min-width: 80vw;
    max-width: 80vw;
    max-height: 60vh;
}
  
.equipment .container {
    display: flex;
    justify-content: center;
}
  
.equipment .container figure {
    display: inline-flex;
    flex-direction: row-reverse;
    align-items: center;
}
  
.equipment .container .caption {
    background-color: whitesmoke;
    min-width: 40vw;
    max-width: 40vw;
    max-height: 60vh;
    padding: 2rem;
}

.equipment .container .caption h3 {
    text-decoration: underline;
}
  
.equipment .container img {
    object-fit: contain;
    min-width: 40vw;
    max-width: 40vw;
    max-height: 60vh;
    padding: 1rem;
}


/* Grades section */

section .grades {
    margin: 2rem auto;
    background-color: whitesmoke;
    min-width: 80vw;
    max-width: 80vw;
    min-height: 100vh;
    max-height: 100vh;
}
  
.grades .container {
    display: flex;
    justify-content: center;
    min-height: 40rem;
    max-height: 40rem;
}
  
.grades .container figure {
    display: inline-flex;
    flex-direction: row-reverse;
    align-items: center;
}
  
.grades .container .caption {
    background-color: whitesmoke;
    min-width: 40vw;
    max-width: 40vw;

    max-height: 40rem;
    padding: 0.5rem;
}

.grades .container .caption p {
    padding: 0.4rem 0 1rem 0;
}

.grades .container img {
    object-fit: contain;
    min-width: 40vw;
    max-width: 40vw;
    max-height: 60vh;
    padding: 1rem;
}


/* Building section */

section .build {
    margin: 2rem auto;
    background-color: whitesmoke;
    min-width: 80vw;
    max-width: 80vw;
    max-height: 60vh;
}
  
.build .container {
    display: flex;
    justify-content: center;
}
  
.build .container figure {
    display: inline-flex;
    flex-direction: row;
    align-items: center;
}
  
.build .container .caption {
    background-color: whitesmoke;
    min-width: 40vw;
    max-width: 40vw;
    max-height: 60vh;
    padding: 2rem;
}

.build .container img {
    object-fit: contain;
    min-width: 40vw;
    max-width: 40vw;
    max-height: 60vh;
    padding: 1rem;
}


/* Finishing section */

section .finish {
    margin: 2rem auto;
    background-color: whitesmoke;
    min-width: 80vw;
    max-width: 80vw;
    max-height: 60vh;
}
  
.finish .container {
    display: flex;
    justify-content: center;
}
  
.finish .container figure {
    display: inline-flex;
    flex-direction: row;
    align-items: center;
}
  
.finish .container .caption {
    background-color: whitesmoke;
    min-width: 40vw;
    max-width: 40vw;
    max-height: 60vh;
    padding: 2rem;
}

.finish .container .caption h3 {
    text-decoration: underline;
}
  
.finish .container img {
    object-fit: contain;
    min-width: 40vw;
    max-width: 40vw;
    max-height: 60vh;
    padding: 1rem;
}


/* Display section */

section .display {
    margin: 1rem auto;

}
  
.display .container {
    display: flex;
    justify-content: center;
}
  
.display .container figure {
    display: flex;
    flex-direction: column;
    align-items: center;
}
  
.display .container .caption {
    background-color: whitesmoke;
    min-width: 40vw;
    max-width: 40vw;
    max-height: 60vh;
    padding: 2rem;
}
  
.display .container img {
    min-width: 90%;
    max-width: 90%;
    max-height: 90%;
    object-fit: cover;
    border: 5px solid black;
    margin: 2rem;
}


/* Tips section */

section .tips {
    margin: 2rem auto;
    background-color: whitesmoke;
    min-width: 80vw;
    max-width: 80vw;
    max-height: 60vh;
}
  
.tips .container {
    display: flex;
    justify-content: center;
}
  
.tips .container figure {
    display: inline-flex;
    flex-direction: row-reverse;
    align-items: center;
}
  
.tips .container .caption {
    background-color: whitesmoke;
    min-width: 40vw;
    max-width: 40vw;
    max-height: 60vh;
    padding: 2rem;
}

.tips .container img {
    object-fit: contain;
    min-width: 40vw;
    max-width: 40vw;
    max-height: 60vh;
    padding: 1rem;
}


/* Footer section */

footer {
    text-align: center;
}

footer p, a {
    font-size: 1.3rem;
}


/* Media queries */

@media only screen and (max-width: 1250px) {

    /* Nav section */

    .nav {
        display: inline-grid;
        min-height: 200vh;
        margin-top: 0rem;
    }

    .nav #left-block {
        min-width: 80vw;
        max-width: 80vw;
        min-height: 60vh;
        max-height: 60vh;
        margin: auto 1rem;
    }

    .nav #left-block .top img {
        min-width: 80vw;
        max-width: 80vw;
        min-height: 50vh;
        max-height: 50vh;
    }
    
    .nav #left-block .bottom .bottom-left img {
        min-width: 39vw;
        max-width: 39vw;
        min-height: 40vh;
        max-height: 40vh;
    }
    
    .nav #left-block .bottom .bottom-right img {
        min-width: 39vw;
        max-width: 39vw;
        min-height: 40vh;
        max-height: 40vh;
    }
    
    .nav #right-block {
        min-width: 80vw;
        max-width: 80vw;
        min-height: 60vh;
        max-height: 60vh;
        padding-left: 0;
        margin: auto 1rem;
    }

    .nav #right-block .left img {
        min-width: 45vw;
        max-width: 45vw;
        min-height: 80vh;
        max-height: 80vh;
    }
    
    .nav #right-block .right .top img {
        min-width: 32vw;
        max-width: 32vw;
        min-height: 35vh;
        max-height: 35vh; 
    }
    
    .nav #right-block .right .bottom img {
        min-width: 32vw;
        max-width: 32vw;
        min-height: 43vh;
        max-height: 43vh; 
    }
}


@media only screen and (max-width: 768px) {

    /* Media queries */

    .logo img {
        height: 8rem;
    }


    /* Equipment section */

    section .equipment {
      min-width: 80vw;
      max-width: 80vw;
      max-height: 100vh;
      margin: 1rem auto;
    }
  
    .equipment .container figure {
      display: block;
    }
  
    .equipment .container .caption {
      min-width: 70vw;
      max-width: 70vw;
      padding: 0.5rem;
    }
  
    .equipment .container img {
      min-width: 70vw;
      max-width: 70vw;
      padding: 0.5rem;
    }


    /* Grades section */

    section .grades {
      min-width: 80vw;
      max-width: 80vw;
      max-height: 250vh;
      margin: 1rem auto;
    }

    .grades .container figure {
      display: block;
    }

    .grades .container .caption {
      min-width: 80vw;
      max-width: 80vw;
      padding: 0.5rem;
    }

    .grades .container .caption p {
        font-size: 0.8rem;
    }

    .grades .container img {
      min-width: 80vw;
      max-width: 80vw;
      padding: 0.5rem;
    }


    /* Building section */

    section .build {
        min-width: 80vw;
        max-width: 80vw;
        max-height: 200vh;
        min-height: 170vh;
        margin: 1rem auto;
    }
    
    .build .container figure {
        display: block;
    }
    
    .build .container .caption {
        min-width: 70vw;
        max-width: 70vw;
        padding: 0.5rem;
    }
    
    .build .container img {
        min-width: 70vw;
        max-width: 70vw;
        padding: 0.5rem;
    }


    /* Finishing section */

    section .finish {
        min-width: 80vw;
        max-width: 80vw;
        max-height: 100vh;
        margin: 1rem auto;
    }

    .finish .container figure {
        display: block;
    }

    .finish .container .caption {
        min-width: 70vw;
        max-width: 70vw;
        padding: 0.5rem;
    }

    .finish .container img {
        min-width: 70vw;
        max-width: 70vw;
        padding: 0.5rem;
    }


    /* Display section */

    section .display {
        margin: 1rem auto;
        min-width: 80vw;
        max-width: 80vw;
        max-height: 250vh;
    }
    
    .display .container figure {
        display: flex;
        flex-flow: column;
        flex-direction: column;
    }
    
    .display .container .caption {
        min-width: 70vw;
        max-width: 70vw;
        padding: 0.5rem;
    }
    
    .display .container {
        flex-flow: column;
    }


    /* Tips section */

    section .tips {
      min-width: 80vw;
      max-width: 80vw;
      max-height: 100vh;
      margin: 1rem auto;
    }
    
    .tips .container figure {
      display: block;
    }
    
    .tips .container .caption {
      min-width: 70vw;
      max-width: 70vw;
      padding: 0.5rem;
    }
    
    .tips .container img {
      min-width: 70vw;
      max-width: 70vw;
      padding: 0.5rem;
    }


    /* Footer section */

    footer p, a {
        font-size: 0.9rem;
    }
}


@media only screen and (max-width: 400px) {

    /* Nav section */

    .logo img {
        height: 6rem;
    }



}

